--- a/serverless/functions/hello-World.yml
+++ b/serverless/functions/hello-World.yml
@@ -1,5 +1,5 @@
 # define function here after put into mani serverless file
-handler: handler.lambdaHandler
+handler: handler.helloWorld
 name: ${self:service}-${opt:stage, self:provider.stage}-hello
 description:
 
